Fixed background blurriness

--- a/src/app/home/creature/creature.page.scss
+++ b/src/app/home/creature/creature.page.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700&display=swap');
 
 ion-content {
-  --background: url(/assets/kindcrittersbg.png) 0 0/100% 100% no-repeat !important;
+  --background: url(/assets/kindcrittersbg.png) 0 100% no-repeat !important;
+  background: #3679aa;
 }
 
 .main-card {
