--- a/src/app/home/stats/stats.page.scss
+++ b/src/app/home/stats/stats.page.scss
@@ -1,3 +1,4 @@
 ion-content {
-    --background: url(/assets/kindcrittersbg.png) 0 0/100% 100% no-repeat !important;
+    --background: url(/assets/kindcrittersbg.png) 0 100% no-repeat !important;
+    background: #3679aa;
   }
